pkglib_LIBRARIES = libplasma.a

libplasma_a_CPPFLAGS= -I../qt

libplasma_a_SOURCES = \
	Interface.C \
	Init.C \
	Cluster.C \
	Proc.C \
	System.C \
	Queue.C \
	ProcQ.C \
	Thread.C

pkginclude_HEADERS = \
	Interface.h \
	plasma-interface.h \
	plasma.h

noinst_HEADERS = \
	Machine.h  \
	Cluster.h  \
	Proc.h \
	System.h \
	Thread.h \
	Queue.h \
	ThreadQ.h
