pkglib_LIBRARIES = libplasma.a

libplasma_a_CPPFLAGS= -I../qt -I../gc/include

libplasma_a_SOURCES = \
	Interface.C \
	Init.C \
	Cluster.C \
	Proc.C \
	System.C \
	Queue.C \
	ProcQ.C \
	Thread.C \
	Random.C \
	LcgRand.C \
	KissRand.C \
	MtRand.C

pkginclude_HEADERS = \
	plasma-interface.h \
	plasma.h \
	Interface.h \
	Random.h \
	LcgRand.h \
	KissRand.h \
	MtRand.h

noinst_HEADERS = \
	Machine.h  \
	Cluster.h  \
	Proc.h \
	System.h \
	Thread.h \
	Queue.h \
	ThreadQ.h
